# cryptolib

./: README.md
Crypto/: CMakeLists.txt
Crypto/CrispApp/: AppMessage.h  AppMsgHeader.h  AppMsgPayload.h  CMakeLists.txt  DataReader.cpp  DataReader.h  KeyResponse.h  MsgHandler.cpp  MsgHandler.h  NetworkManager.cpp  NetworkManager.h  NewKeyRequest.h  test_main.cpp
Crypto/DirectCrypto/: CMakeLists.txt  direct_crypto.cpp
Crypto/GOSTTest/: CMakeLists.txt  main.cpp
Crypto/GOSTTest/ciphermodes/: CBCTest.cpp  CBCTest.h  CFBTest.cpp  CFBTest.h  CMACTest.cpp  CMACTest.h  CTRTest.cpp  CTRTest.h  ECBTest.cpp  ECBTest.h  OFBTest.cpp  OFBTest.h
Crypto/GOSTTest/ciphersuite/: KuznyechikTest.cpp  KuznyechikTest.h  MagmaTest.cpp  MagmaTest.h
Crypto/GOSTTest/crisp/: CrispTest.cpp  CrispTest.h
Crypto/GOSTTest/hashfunc/: StreebogTest.cpp  StreebogTest.h
Crypto/GOSTTest/hmac/: HMACTest.cpp  HMACTest.h
Crypto/GOSTTest/kdf/: KDFCMACTest.cpp  KDFCMACTest.h  KDFHMACTest.cpp  KDFHMACTest.h
Crypto/GOSTTest/kexp15kimp15/: KExp15Test.cpp  KExp15Test.h
Crypto/ReferenceImplementations/: CMakeLists.txt  test_forward_declarations.h
Crypto/ReferenceImplementations/ciphermodes/: CBC.h  CFB.h  CMAC.h  CTR.h  ECB.h  OFB.h
Crypto/ReferenceImplementations/ciphersuite/: Kuznyechik.cpp  Kuznyechik.h  Magma.cpp  Magma.h
Crypto/ReferenceImplementations/crisp/: CrispDriver.cpp  CrispDriver.h  CrispMessage.h  CrispSuiteFactory.cpp  CrispSuiteFactory.h
Crypto/ReferenceImplementations/crisp/suites/: CrispSuite.h  MagmaCTRCMAC.cpp  MagmaCTRCMAC.h  MagmaCTRCMAC8.cpp  MagmaCTRCMAC8.h  MagmaNullCMAC.cpp  MagmaNullCMAC.h  MagmaNullCMAC8.cpp  MagmaNullCMAC8.h
Crypto/ReferenceImplementations/hashfunc/: Streebog.cpp  Streebog.h  Streebog256.cpp  Streebog256.h  Streebog512.cpp  Streebog512.h
Crypto/ReferenceImplementations/hmac/: HMAC256.cpp  HMAC256.h  HMAC512.cpp  HMAC512.h
Crypto/ReferenceImplementations/kdf/: KDF.h
Crypto/ReferenceImplementations/kexp15kimp15/: KExp15.h
